Update source run model

--- a/model_efficientNet.ipynb
+++ b/model_efficientNet.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "89e2ab24",
+   "metadata": {},
+   "source": [
+    "## 1 Thiết lập môi trường & kiểm tra GPU\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "159355b1",
@@ -47,6 +56,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99169929",
+   "metadata": {},
+   "source": [
+    "## 2 Khởi tạo mô hình Efficientnet_b0\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "02fab128",
@@ -57,6 +74,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7fb552dd",
+   "metadata": {},
+   "source": [
+    "Trong bài toán phân loại hình ảnh phức tạp với 38 lớp, việc huấn luyện một mạng Neural từ đầu đòi hỏi lượng tài nguyên tính toán khổng lồ và thời gian rất dài. Do đó, nhóm em sử dụng thư viện torchvision.models để áp dụng phương pháp Transfer Learning.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "c6f5852c",
@@ -64,6 +89,24 @@
    "outputs": [],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "024c99f8",
+   "metadata": {},
+   "source": [
+    "CUDA (Compute Unified Device Architecture): Là một nền tảng tính toán song song do NVIDIA phát triển. Nếu máy tính hoặc môi trường (như Google Colab) có hỗ trợ GPU NVIDIA, chúng ta sẽ ưu tiên sử dụng nó.\n",
+    "\n",
+    "CPU: Trong trường hợp không có GPU, hệ thống sẽ tự động chuyển về sử dụng CPU để đảm bảo chương trình vẫn có thể chạy được, mặc dù tốc độ sẽ chậm hơn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34eb3718",
+   "metadata": {},
+   "source": [
+    "## 3 Định nghĩa Transform\n"
    ]
   },
   {
@@ -96,6 +139,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe01943f",
+   "metadata": {},
+   "source": [
+    "Lớp Classifier: Truy cập vào model.classifier[1] để thay thế lớp Linear mặc định.\n",
+    "\n",
+    "Đầu ra: Điều chỉnh số lượng node đầu ra thành 38 để khớp với số lượng nhãn trong tập dữ liệu.\n",
+    "\n",
+    "Thiết bị: Đẩy toàn bộ mô hình lên device (GPU/CPU) để tối ưu hóa tốc độ huấn luyện"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "396ab9df",
@@ -103,6 +158,18 @@
    "outputs": [],
    "source": [
     "from torchvision import  transforms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e362b80",
+   "metadata": {},
+   "source": [
+    "Sử dụng thư viện torchvision.transforms để thiết lập một chuỗi các thao tác xử lý ảnh tự động:\n",
+    "- Resize (224x224): Chuyển tất cả hình ảnh về cùng một kích thước chuẩn để phù hợp với đầu vào của các mạng Neural (như ResNet, MobileNet).\n",
+    "- RandomHorizontalFlip & RandomRotation: Tăng cường dữ liệu bằng cách lật và xoay ảnh ngẫu nhiên, giúp mô hình học được các đặc trưng ở nhiều góc độ khác nhau.\n",
+    "- ToTensor: Chuyển đổi hình ảnh từ định dạng PIL Image hoặc NumPy array sang Tensor – cấu trúc dữ liệu mà PyTorch có thể tính toán trên GPU.\n",
+    "- Normalization: Chuẩn hóa giá trị Pixel về khoảng $[0, 1]$ và điều chỉnh theo giá trị trung bình (mean) và độ lệch chuẩn (std) của bộ dữ liệu ImageNet để mô hình hội tụ nhanh hơn."
    ]
   },
   {
@@ -126,6 +193,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "362a3c6a",
+   "metadata": {},
+   "source": [
+    "tạo train_transform để tăng đa dạng dữ liệu và giảm overfitting \n",
+    "  - Đưa ảnh về cùng kích thước đầu vào.\n",
+    "\n",
+    "  - Lật ngang ngẫu nhiên; phù hợp vì nhiều bệnh lá không phụ thuộc hướng trái/phải.\n",
+    "\n",
+    "  - Xoay ngẫu nhiên trong khoảng ±10° để tăng tính bất biến theo góc chụp.\n",
+    "\n",
+    "  - Tạo biến thiên ánh sáng/độ tương phản, giúp mô hình bền hơn trước điều kiện chụp khác nhau.\n",
+    "\n",
+    "  - Chuyển ảnh sang tensor float32 (C x H x W) trong [0, 1].\n",
+    "\n",
+    "  - Chuẩn hoá theo thống kê ImageNet để khớp với pretrained weights.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "28b266a3",
@@ -143,6 +229,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "876e6ce2",
+   "metadata": {},
+   "source": [
+    "tạo val_transform với mục tiêu đánh giá công bằng và ổn định.\n",
+    "\n",
+    "  - Chuẩn hoá kích thước ảnh đầu vào để model nhận input đồng nhất.\n",
+    "  - Đưa ảnh về tensor dạng float trong khoảng [0, 1], chuyển layout thành C x H x W.\n",
+    "  - Chuẩn hoá phân phối pixel theo thống kê ImageNet để khớp với pretrained backbone.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7c81a2e",
+   "metadata": {},
+   "source": [
+    "## 4 Chuẩn bị dữ liệu\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "01509324",
@@ -152,6 +260,21 @@
     "from torchvision.datasets import ImageFolder\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.cuda.amp import autocast, GradScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac07d59c",
+   "metadata": {},
+   "source": [
+    "- ImageFolder giúp tự động quét cấu trúc thư mục của bộ dữ liệu để gán nhãn tương unhws cho ảnh\n",
+    "- DataLoader là bộ quản lý việc nạp dữ liệu theo từng Batch.\n",
+    "\n",
+    "Nhóm em sử dụng torch.cuda.amp để thực hiện kỹ thuật Mixed Precision Training:\n",
+    "\n",
+    "- autocast: Tự động chuyển đổi các phép toán phù hợp sang định dạng float16 thay vì float32 mặc định, Việc này giúp giảm một nửa dung lượng bộ nhớ và tăng tốc độ xử lý trên các dòng GPU hiện đại.\n",
+    "\n",
+    "- GradScaler: Do sử dụng float16 có thể gây ra hiện tượng mất mát dữ liệu khi đạo hàm quá nhỏ, GradScaler giúp phóng đại các giá trị gradient để duy trì độ chính xác và tính ổn định cho quá trình cập nhật trọng số."
    ]
   },
   {
@@ -167,6 +290,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "126c1437",
+   "metadata": {},
+   "source": [
+    "## 5 EDA/ Visualize dữ liệu\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "dafd3c49",
@@ -175,6 +307,37 @@
    "source": [
     "root = train_path\n",
     "full_ds = ImageFolder(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e68c7600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_ds = ImageFolder(train_path, transform=train_transform)\n",
+    "# valid_ds = ImageFolder(valid_path, transform=val_transform)\n",
+    "# test_ds = ImageFolder(test_path, transform=val_transform)\n",
+    "\n",
+    "\n",
+    "from torch.utils.data import random_split\n",
+    "full_ds = ImageFolder(train_path, transform=train_transform)\n",
+    "train_size = int(0.8 * len(full_ds))\n",
+    "val_size = len(full_ds) - train_size\n",
+    "train_ds, valid_ds = random_split(full_ds, [train_size, val_size], generator=torch.Generator().manual_seed(42))\n",
+    "\n",
+    "valid_ds.dataset.transform = val_transform\n",
+    "test_ds = ImageFolder(test_path, transform=val_transform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "918af42c",
+   "metadata": {},
+   "source": [
+    "### 5.1 Danh sách lớp\n",
+    "\n"
    ]
   },
   {
@@ -302,6 +465,22 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0143b7b1",
+   "metadata": {},
+   "source": [
+    "Phân bổ ảnh giữa các nhãn đồng đều không có tình trạng bị lệch, giúp mô hình không bị thiên vị dẫn đến ảnh hưởng kết quả dự đoán."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4026c6cb",
+   "metadata": {},
+   "source": [
+    "### 5.2 Over Bright"
    ]
   },
   {
@@ -436,25 +615,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a650629c",
+   "cell_type": "markdown",
+   "id": "e64fbda5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# train_ds = ImageFolder(train_path, transform=train_transform)\n",
-    "# valid_ds = ImageFolder(valid_path, transform=val_transform)\n",
-    "# test_ds = ImageFolder(test_path, transform=val_transform)\n",
-    "\n",
-    "\n",
-    "from torch.utils.data import random_split\n",
-    "full_ds = ImageFolder(train_path, transform=train_transform)\n",
-    "train_size = int(0.8 * len(full_ds))\n",
-    "val_size = len(full_ds) - train_size\n",
-    "train_ds, valid_ds = random_split(full_ds, [train_size, val_size], generator=torch.Generator().manual_seed(42))\n",
-    "\n",
-    "valid_ds.dataset.transform = val_transform\n",
-    "test_ds = ImageFolder(test_path, transform=val_transform)"
+    "Số ảnh vị over brightkhoảng 1.6%, rất ít và nhóm e quyết định vẫn giữ các ảnh đó"
    ]
   },
   {
@@ -508,6 +673,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "847b02cf",
+   "metadata": {},
+   "source": [
+    "Số ảnh over bright tập trung chủ yếu vào 1 số nhãn nhưng chiếm trọng số khong lớn nên không ảnh hưởng"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "b3b1316d",
@@ -532,6 +705,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d67a115",
+   "metadata": {},
+   "source": [
+    "Batch size (64): Cân bằng giữa tốc độ huấn luyện và bộ nhớ GPU.\n",
+    "\n",
+    "Shuffle (Train): Xáo trộn ảnh để mô hình không học vẹt thứ tự mẫu.\n",
+    "\n",
+    "Num workers (8): Sử dụng đa luồng CPU để nạp ảnh song song, tránh nghẽn cổ chai.\n",
+    "\n",
+    "Pin memory (True): Tăng tốc độ chuyển dữ liệu từ RAM lên GPU."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "750cd6e7",
@@ -543,6 +730,24 @@
     "scaler = torch.amp.GradScaler()\n",
     "torch.backends.cudnn.benchmark = True\n",
     "torch.set_float32_matmul_precision(\"high\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0579a8a",
+   "metadata": {},
+   "source": [
+    "Hàm mất mát sử dụng label_smoothing=0.1 để ngăn mô hình quá tự tin overconfident, giúp tăng khả năng tổng quát hóa.\n",
+    "\n",
+    "Bộ tối ưu (Adam): Tốc độ học khởi tạo $10^{-3}$ giúp hội tụ nhanh chóng."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51664d25",
+   "metadata": {},
+   "source": [
+    "## 7 Hàm đánh giá\n"
    ]
   },
   {
@@ -579,6 +784,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15b67703",
+   "metadata": {},
+   "source": [
+    "@torch.no_grad(): Vô hiệu hóa việc tính toán Gradient, giúp tiết kiệm bộ nhớ và tăng tốc độ tính toán vì chúng ta không cần cập nhật trọng số ở bước này.\n",
+    "\n",
+    "model.eval(): Chuyển mô hình sang chế độ đánh giá, đảm bảo các lớp như Dropout hay Batch Normalization hoạt động đúng logic dự báo.\n",
+    "\n",
+    "non_blocking=True: Kết hợp với pin_memory=True ở DataLoader để đẩy nhanh quá trình nạp dữ liệu lên GPU mà không làm gián đoạn luồng xử lý của CPU."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a9c87e2",
+   "metadata": {},
+   "source": [
+    "## 8 Early Stopping\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "3fd93c1c",
@@ -601,6 +826,24 @@
     "        else:\n",
     "            self.counter += 1\n",
     "            return self.counter >= self.patience"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae280313",
+   "metadata": {},
+   "source": [
+    "patience=4: Số lượng Epoch tối đa mà mô hình có thể chịu đựng khi độ lỗi không cải thiện trước khi dừng hẳn.\n",
+    "\n",
+    "min_delta: Ngưỡng cải thiện tối thiểu để được coi là một bước tiến triển tốt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bf9efad",
+   "metadata": {},
+   "source": [
+    "## 9 Huấn luyện mô hình"
    ]
   },
   {
@@ -664,7 +907,7 @@
     "\n",
     "        optimizer.zero_grad(set_to_none=True)\n",
     "\n",
-    "        with autocast():\n",
+    "        with torch.amp.autocast():\n",
     "            out = model(x)\n",
     "            loss = criterion(out, y)\n",
     "\n",
@@ -716,6 +959,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c59cba4",
+   "metadata": {},
+   "source": [
+    "Tại Epoch 1, với tốc độ học đã được điều chỉnh về mức thấp ($10^{-4}$), mô hình đạt Val Acc lên tới 99.91% và Val Loss là 0.6737.\n",
+    "\n",
+    "Sự ổn định xuyên suốt: Qua các chu kỳ tiếp theo, các chỉ số biến thiên cực nhỏ. Độ chính xác đạt mức cao nhất là 99.96% tại Epoch 8.\n",
+    "\n",
+    "Hệ thống đã tự động kích hoạt lệnh early access ở Epoch 11 khi nhận thấy các chỉ số không còn cải thiện thêm, giúp tối ưu hóa thời gian và tránh hiện tượng quá khớp (Overfitting)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "ec934d46",
@@ -741,6 +996,24 @@
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c6ae932",
+   "metadata": {},
+   "source": [
+    "Khác với train bằng mô hình MobileNetV3 có sự biến động lớn trước khi giảm LR, biểu đồ lần này là các đường thẳng tắp. Đường Train Loss và Validation Loss gần như trùng khít nhau ở mức thấp nhất .\n",
+    "\n",
+    "Độ tin cậy: Đường Validation Accuracy duy trì một đường thẳng sát mốc 1.0, chứng minh mô hình cực kỳ tin cậy và không hề có dấu hiệu của Overfitting hay Underfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "826f3551",
+   "metadata": {},
+   "source": [
+    "## 10 Thử mô hình với tập test"
    ]
   },
   {
@@ -816,6 +1089,26 @@
     "        pred = int(out.argmax(dim=1).item())\n",
     "\n",
     "    print(p.name, full_ds.classes[pred])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d8019bf",
+   "metadata": {},
+   "source": [
+    "Kết quả dự đoán trên các tệp tin hình ảnh độc lập cho thấy mô hình đạt độ chính xác tuyệt đối trên tập mẫu thử:\n",
+    "\n",
+    "Các mẫu bệnh như AppleScab, CornCommonRust, PotatoEarlyBlight đều được gán nhãn chính xác tương ứng với tên lớp trong tập dữ liệu.\n",
+    "\n",
+    "Ngay cả các nhãn phức tạp như Tomato___Tomato_Yellow_Leaf_Curl_Virus cũng được nhận diện không sai sót."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a976d0d",
+   "metadata": {},
+   "source": [
+    "## 11 Lưu mô hình "
    ]
   },
   {
